Ενιαίο αρχείο css
εκανα μερικες μικρες αλλαγες στα δυο αρχεια με τα 5 προϊοντα καθως εβγαινε ερρορ στο html validator
και εβαλα οοοολα τα css σε ενα αρχειο
Απο εδω και στο εξης θα πρεπει να κανουμε 3ο παραδοτερο παλι σε ΕΝΑ ΜΟΝΟ αρχειο
πλουρλπ

--- a/Exercise2/about_us.html
+++ b/Exercise2/about_us.html
@@ -10,7 +10,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="author" content="co-authored by Anastasios Mpourtsouklis, Dimitrios Paraskeuiotis">
-    <link rel="stylesheet" href="/Exercise2/css/about_us.css">
+    <link rel="stylesheet" href="/Exercise2/css/omorfo.css">
 </head>
 
 <body>
@@ -58,7 +58,7 @@
             </p>
         </section>
 
-        <p class="synexeia-perilhpshs">
+        <p id="synexeia-perilhpshs">
             Οι δρόμοι τους θα συναντηθούν ξανα το 2022, όπου αποφάσισαν να αφήσουν τις θέσεις τους στις εταιρείες που
             εργαζόντουσαν και να ιδρύσουν το Technodata.
             <br>Πλέον, έχοντας περισσότερα απο 15 καταστήματα σε Ελλάδα και Κύπρο, ο όμιλος Technodata προσφέρει μια
