--- a/Exercise2/contact.html
+++ b/Exercise2/contact.html
@@ -10,7 +10,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="author" content="co-authored by Anastasios Mpourtsouklis, Dimitrios Paraskeuiotis">
-    <link rel="stylesheet" href="/Exercise2/css/contact.css">
+    <link rel="stylesheet" href="/Exercise2/css/omorfo.css">
 </head>
 
 <body>
@@ -31,7 +31,7 @@
     <main class="main-content">
         <h2>Τεχνική Υποστήριξη</h2>
 
-        <h3>Φόρμα Επικοινωνίας</h3>
+        <h3 id="forma-titlos">Φόρμα Επικοινωνίας</h3>
 
         <div class="forma">
             <form action="index.html" method="GET" enctype="multipart/form-data" class="forma-yposthrikshs">
