--- a/Exercise2/product-iphone14-pro-max.html
+++ b/Exercise2/product-iphone14-pro-max.html
@@ -10,7 +10,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="author" content="co-authored by Anastasios Mpourtsouklis, Dimitrios Paraskeuiotis">
-    <link rel="stylesheet" href="/Exercise2/css/product-iphone14-pro-max.css">
+    <link rel="stylesheet" href="/Exercise2/css/omorfo.css">
 </head>
 
 <body>
@@ -30,11 +30,11 @@
     </header>
 
     <main class="main-content">
-        <h2>Apple iPhone 14 Pro Max 128GB - Space Black Κινητό Smartphone</h2>
+        <h2 id="iphone-name">Apple iPhone 14 Pro Max 128GB - Space Black Κινητό Smartphone</h2>
 
-        <h3> <a href="/Exercise2/products-phones.html">Κινητό Τηλέφωνο</a></h3>
+        <h3 id="category"> <a href="/Exercise2/products-phones.html">Κινητό Τηλέφωνο</a></h3>
 
-        <h4>267271</h4>
+        <h4 id="iphone-code">267271</h4>
 
         <img src="/assets/iphone14pro.png" width="350" height="350" class="display-photo" alt="Apple iPhone 14 Pro Max">
 
@@ -69,7 +69,7 @@
             </div>
         </section>
 
-        <div class="price">
+        <div id="iphone">
             <p>€1549.00</p>
         </div>
 
